--- a/lab8/src/App.css
+++ b/lab8/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+body {
+  height: 100%;
+  background-color: #db8bf2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ToDoList{
+  margin-top: 40px;
+  margin-bottom: 20px;
+  width: 400px;
+  max-height: 450px;
+  background-color:#f6e0fc;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;   
+  text-align: left ;
+  border: 1px solid #000000;
+  border-radius: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+#newItem{
+  height: 20px;
+  background-color: #f6e0fc;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+button{
+  background-color: #f6e0fc;
+  border-radius: 5px;
+} 
